ajustando rotas que estavam com problemas de queries no banco de dados
