# swagger.yaml
@@ -27,49 +27,44 @@ paths:
             properties:
               name:
                 type: string
+                example: Carlos
               age:
                 type: number
+                example: 22
               cpf:
                 type: string
+                example: 003.255.310-21
               endereco:
                 type: object
                 properties:
                   street:
                     type: string
+                    example: Rua Francisco Dias Velho
                   city:
                     type: string
+                    example: Chapecó
                   state:
                     type: string
+                    example:  SC
                   country:
                     type: string
+                    example: Brasil
                   zipCode:
                     type: string
-              paymentMethod:
-                type: object
-                properties:
-                  type:
-                    type: string
-                  number:
-                    type: string
-                  name:
-                    type: string
-                  expirationDate:
-                    type: string
-                  cvv:
-                    type: string
+                    example: 89805-541
               email:
                 type: string
+                example: teste@teste.com
               password:
                 type: string
+                example: senhacriptografada
               bornDate:
                 type: string
-                format: date
-              orderHistory:
-                type: array
-                items:
-                  type: string
+                format: date,
+                example: 2000-10-30T00:00:00.000Z
               avatar:
                 type: string
+                example: base64
       responses:
         201:
           description: Cliente criado com sucesso
@@ -96,8 +91,10 @@ paths:
             properties:
               email:
                 type: string
+                example: teste@teste.com
               password:
                 type: string
+                example: senhacriptografada
       responses:
         200:
           description: Cliente autenticado com sucesso
@@ -126,39 +123,44 @@ paths:
             properties:
               name:
                 type: string
+                example: Carlos
               age:
                 type: number
+                example: 22
               cpf:
                 type: string
-              adress:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    street:
-                      type: string
-                    houseNumber:
-                      type: string
-                    city:
-                      type: string
-                    district:
-                      type: string
-                    landMark:
-                      type: string
-              paymentMethod:
-                type: array
-                items: {}
+                example: 003.255.310-21
+              endereco:
+                type: object
+                properties:
+                  street:
+                    type: string
+                    example: Rua Francisco Dias Velho
+                  city:
+                    type: string
+                    example: Chapecó
+                  state:
+                    type: string
+                    example:  SC
+                  country:
+                    type: string
+                    example: Brasil
+                  zipCode:
+                    type: string
+                    example: 89805-541
               email:
                 type: string
+                example: teste@teste.com
               password:
                 type: string
+                example: senhacriptografada
               bornDate:
                 type: string
-                format: date-time
-              orderHistory:
-                type: object
+                format: date,
+                example: 2000-10-30T00:00:00.000Z
               avatar:
                 type: string
+                example: base64
       security:
         - Token: []
       responses:
@@ -351,7 +353,7 @@ paths:
     get:
       tags:
         - Client
-      summary: Solicitar entrega
+      summary: Mostra todos os pedidos do cliente
       description: Solicita uma entrega para o endereço do cliente
       security:
         - bearerAuth: []
@@ -733,6 +735,80 @@ paths:
           description: Produtos criados com sucesso
         '401':
           description: Não autorizado
-
-
-
+  /delivery/update/{id}:
+    put:
+      tags:
+        - Delivery
+      summary: Atualiza Status do pedido
+      description: Esta rota permite atualizar o status do pedido. É necessário estar autenticado para utilizar esta rota.
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: params
+          name: params
+          description: Id do delivey
+          required: true
+          schema:
+            type: string
+            properties:
+              id:
+                type: string
+        - in: body
+          name: body
+          description: Informações do cliente a ser criado
+          required: true
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: cancelado
+      responses:
+        201:
+          description: delivery alterado com sucesso
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
+  /delivery/get/status:
+    get:
+      tags:
+        - Delivery
+      summary: Pega todos os Deliverys com o status especificado
+      description: Esta rota permite pegar todos os pedidos com o status especificado. É necessário estar autenticado para utilizar esta rota.
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: body
+          name: body
+          description: Informações do pedido a ser coletado
+          required: true
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: cancelado
+      responses:
+        201:
+          description: objeto com o pedido especificado
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
+  /product/show/:
+    get:
+      tags:
+        - Product
+      summary: Pega todos os Produtos 
+      description: Esta rota permite pegar produtos cadstrados. É necessário estar autenticado para utilizar esta rota.
+      security:
+        - BearerAuth: []
+     
+      responses:
+        201:
+          description: retorna um array com todos os produtos cadastrados
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
